refactor: general improvements